tests/snapshots/arg__next_line_help.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_9eb35108'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-o[0m, [1m--long-option-flag[0m <value1> <value2>
          Some really long help and complex
          help that makes more sense to be
          on a line after the option
  [1m-h[0m, [1m--help[0m
          Print help
EOF_9eb35108
exit 0
