tests/snapshots/arg__num_args_multi_positional-2.snap
---
source: tests/arg.rs
expression: output2
---
claptrap_word='word'
claptrap_file=('file1' 'file2' 'file3')
