tests/snapshots/arg__num_args_tuples-1.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_file=('in-file' 'out-file')
