tests/snapshots/arg__overrides_with.snap
---
source: tests/arg.rs
expression: output
---
claptrap_debug='true'
claptrap_color='true'
claptrap_flag='false'
