tests/snapshots/arg__overrides_with_all.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_color='true'
claptrap_flag='false'
claptrap_debug='false'
